package com.test.metrics.model;

option optimize_for = SPEED;
option java_package = "com.test.metrics.model";

// The event type enum:
enum ClientEventType
{
    UNKNOWN = 1;
    USER_REGISTERED = 2;
}

message KeyValueData
{
    // key and value attributes:
    required string key = 1;
    required string value = 2;
}

// Representing a single event.
message ClientEventData
{
    // Core event attributes:
    required string event_id = 1;
    required ClientEventType event_type = 2;
    required int64 timestamp = 3;

    // arbitrary data
    optional string data = 4;

    // allow arbitrary key-value pairs
    repeated KeyValueData keyvalue_data = 5;
}

// The message uploaded to the server - containing multiple events
message ClientEventUploadRequest
{
    required string request_id = 1;

    // The clients device type (Android, iPhone etc.)
    required string device_type = 2;

    // The events being uploaded
    repeated ClientEventData events = 3;
}